# PearlMind-ML-Journey

./: ChangeLog.md  Code_of_Conduct.md  Project_Initialization_Script.py  Pull_Request.md  README.md  contributions.md  docker_development.py  ds-ml-guide.html  license.md  pearl mind_complete.py  pearlmind_animations.html  pearlmind_ml_platform.py  pyproject.toml  requirements.md  securitypolicy.md
.github/workflows/: ci.yml  django.yml
Learning/: 01_linear_regression.py  02_decision_trees_to_forest.py  03_neural_networks_akaken.py  04_connecting_it_all_production.py
Learning/cnn_rnn_api_demo/: Readme.md
Learning/cnn_rnn_api_demo/src/: client_demo.py  models.py  serve.py  tokenizer.py  train_lm.py  visual_theme_demo.py
Learning/dolly15k_exploration/: analyze.py  charts.py  report_snippet.md
Learning/dolly15k_exploration/assets/: closedqa_top_tokens.json  creative_top_tokens.json  summary.json
Learning/dolly15k_exploration_v2/: Makefile  README.md  analyze.py  charts.py  theme.py
programs/: readme_.md  temporal-echo-reconstruction.py
programs/delphi-2m/: cazzy_aporbo_model.py  cazzy_improvements_doc.md  cazzy_inference.py  cazzy_training.py  comparison_script.py
scripts/: AI_Ethics_Framework.py  MLForgeGame.py  avacadoML.py  living_oracle.py  neuro_temporal_weaver.py  quantum_health_manifold.py  train_example.py  train_model.py
src/pearlmind/cli/: main.py
src/pearlmind/deployment/: api.py
src/pearlmind/experiment/: tracker.py
src/pearlmind/models/ensemble/: xgboost_complete_model.py  xgboost_model.py
tests/: test_models.py
